2009-07-23  John W. Eaton  <jwe@octave.org>

	* toplev.cc (IGNORE_EXCEPTION, SAFE_CALL): New macros.
	(clean_up_and_exit, do_octave_atexit): Use SAFE_CALL to handle
	exceptions while preparing to exit.

2009-08-04  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_call_stack::do_goto_frame_relative): Allow
	NSKIP to be 0.  Set current scope and context.
	* input.cc (Fkeyboard): Use octave_call_stack::goto_frame_relative
	to set scope in user code that called the keyboard function.

2009-08-04  Jaroslav Hajek  <highegg@gmail.com>

	* input.cc (Fkeyboard): Only call do_keyboard, don't fiddle with
	stack.

2009-11-17  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/balance.cc: Fix docs.

2009-11-03  David Grundberg  <davidg@cs.umu.se>

	* ov-class.cc (make_idx_args): Call user-defined subsref/subsasgn
	with 1xN structs instead of Nx1.

2009-09-30  John W. Eaton  <jwe@octave.org>

	* error.cc (error_1, pr_where_2, handle_message):
	Don't do anything if fmt is empty.
	(Ferror): Call print_usage if nargin == 0.

	2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.3 released.

2009-09-08  Rafael Laboissiere  <rafael@debian.org>

	* pr-output.cc: New test.

2009-09-03  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_format (const Complex&, int&, int&)):
	Avoid passing NaN or Inf to log10.

2008-09-01  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/eig.cc (Feigs): Correct nesting error in option
	parsing that prevented the use of a function for generalized
	eigenvalue problems.

2009-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (get_current_method_class): Check before slicing.

2009-08-26  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Ffmod): Reverse order of args.

2009-08-26  Rob Mahurin  <rob@utk.edu>

	* syscalls.cc: Recommend waitpid() in popen2() documentation.
	
2009-08-25  John W. Eaton  <jwe@octave.org>

	* graphics.cc (gnuplot_backend::send_quit): Wait for gnuplot process.
