@@ -159,7 +159,7 @@ extract_function (const octave_value& arg, const std::string& warn_for,
 	{
 	  int parse_status;
 
-	  eval_string (cmd, true, parse_status);
+	  eval_string (cmd, true, parse_status, 0);
 
 	  if (parse_status == 0)
 	    {
@@ -171,6 +171,9 @@ extract_function (const octave_value& arg, const std::string& warn_for,
 			 warn_for.c_str (), fname.c_str ());
 		  return retval;
 		}
+
+              warning ("%s: passing function body as a string is obsolete."
+                       " Please use anonymous functions.", warn_for.c_str ());
 	    }
 	  else
 	    error ("%s: `%s' is not valid as a function",
