@@ -1,3 +1,8 @@
+2009-10-15  Jaroslav Hajek  <highegg@gmail.com>
+
+	* variables.cc (extract_function): Pass 0 to eval_string to avoid
+	error.
+
 2009-07-23  John W. Eaton  <jwe@octave.org>
 
 	* toplev.cc (IGNORE_EXCEPTION, SAFE_CALL): New macros.
